--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_JournalPart.EventList.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_JournalPart.EventList.cshtml
@@ -1,4 +1,4 @@
-﻿<header class="display-events-overview-header">
+﻿<header class="dashboard-title">
 	<span class="display-events-header-menu-title hover-cursor-pointer" data-bind="click: function () { $root.showSelectedJournalMenuItem( 1 ) }, css: { selected: $root.detailsPage.journalPart.eventListVM.selectedMenuItem() === 1 }">Mój kalendarz</span>
 	<span class="display-events-header-menu-title hover-cursor-pointer" data-bind="click: function () { $root.showSelectedJournalMenuItem( 2 ) }, css: { selected: $root.detailsPage.journalPart.eventListVM.selectedMenuItem() === 2 }">Moje publiczne wydarzenia</span>
 	<i class="btn-close md-icon-hover md-icon-rg mdi mdi-window-close" data-bind="click: $root.closeAllSelectedEventsListContainerOnClick"></i>
