--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_UpcomingEventsPart.EventList.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_UpcomingEventsPart.EventList.cshtml
@@ -1,5 +1,5 @@
-﻿<header class="display-events-overview-header">
-	<span class="display-events-header-menu-title selected hover-cursor-pointer">Publiczne wydarzenia</span>
+﻿<header class="dashboard-title">
+	<span class="display-events-header-menu-title selected hover-cursor-pointer selected">Publiczne wydarzenia</span>
 	<i class="btn-close md-icon-hover md-icon-rg mdi mdi-window-close" data-bind="click: $root.closeAllSelectedEventsListContainerOnClick"></i>
 </header>
 <div data-bind="with: $root.lobbyPage.upcomingEventsPart.eventListVM" class="display-events-overview-body">
