--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_EventListItem.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_EventListItem.cshtml
@@ -8,9 +8,9 @@
 					<div data-bind="html: startDate.displayFullDate_EnlargeDay()"></div>
 					<div data-bind="text: startDate.displayFullTime()"></div>
 				</div>
-				<div class="sm-label pad-top-8" data-bind="text: startDate.displayInfo()"></div>
 			</div>
 			<div class="event-list-item-right">
+				<div class="sm-label" data-bind="text: startDate.displayInfo()"></div>
 				<span class="list-item-title" data-bind="text: name"></span>
 			</div>
 		</div>
