--- a/KalendarzKarierySolution/KalendarzKariery/Scripts/Lib/DzieuoJs/Dzieuo.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Scripts/Lib/DzieuoJs/Dzieuo.css
@@ -40,13 +40,13 @@
 		width: 10px;
 		height: 10px;
 		margin: 3px;
-		border: 2px solid #E0DAD5;
+		border: 2px solid #4C4C4C;
 		display: inline-block;
 		border-radius: 10px;
 	}
 
 		#dzHorizontalPaging .dz-horizontal-paging-item.current {
-			background: #E0DAD5;
+			background: #4C4C4C;
 			border: 2px solid white;
 		}
 
@@ -59,13 +59,13 @@
 		width: 10px;
 		height: 10px;
 		margin: 4px;
-		border: 2px solid #E0DAD5;
+		border: 2px solid #4C4C4C;
 		display: block;
 		border-radius: 10px;
 	}
 
 		#dzVerticalPaging .dz-vertical-paging-item.current {
-			background: #E0DAD5;
+			background: #4C4C4C;
 			border: 2px solid white;
 		}
 
